[package]
name = "piqqi-be"
version = "0.1.0"
edition = "2021"
authors = ["Eric Otuvaka <eric.otuvaka@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum', 'd1'] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ['json'] }
tower-service = "0.3.3"
serde = "1.0.228"
serde_json = "1.0.145"
validator = { version = "0.16.0", features = ["derive"] }
anyhow = "1.0.100"
