[package]
name = "piqqi-be"
version = "0.1.0"
edition = "2021"
authors = ["Eric Otuvaka <eric.otuvaka@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http','d1'] }
worker-macros = { version = "0.6", features = ['http'] }
serde = "1.0.228"
serde_json = "1.0.145"
validator = { version = "0.16.0", features = ["derive"] }
anyhow = "1.0.100"
rand = "0.9.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
